# cosmic-applet-cpu

./: Cargo.toml  README.md  justfile
res/: another.lusitano.AppletCpu.desktop  another.lusitano.AppletCpu.metainfo.xml
src/: app.rs  config.rs  cpu.rs  main.rs
