[package]
name = "cosmic-applet-cpu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
open = "5.1.3"
rust-embed = "8.3.0"
sysinfo = "0.32.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
